fix: set the propoer the service list component right inline padding on tablets

--- a/src/common/Layout/Footer/Footer.scss
+++ b/src/common/Layout/Footer/Footer.scss
@@ -9,17 +9,20 @@
   background-color: $black;
   color: $white;
   padding: rem(300) rem(39) rem(64);
+  padding-inline: 0;
   margin-top: rem(-200);
 
   &__logo {
     width: rem(202);
     height: rem(27);
+    margin-bottom: rem(22);
+    margin-inline: auto;
   }
 
   &__links {
     border-top: rem(1) solid rgba(245, 245, 245, 0.3);
-    width: 100%;
-    padding-top: rem(32);
+    padding-top: rem(30);
+    width: 327px;
 
     & > *:not(:last-of-type) {
       padding-bottom: rem(20);
@@ -72,21 +75,35 @@
     padding-top: rem(150);
     margin-top: rem(-70);
     text-align: left;
+    padding-inline: rem(39);
+
+    & > div:first-child {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-column: 1/4;
+      padding-bottom: rem(50);
+      border-bottom: rem(1) solid rgba(245, 245, 245, 0.2);
+      justify-content: space-between;
+    }
 
     &__logo {
-      grid-column: 1/2;
+      margin-left: 0;
     }
 
     &__links {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-column: 2/4;
       justify-items: end;
+      width: 100%;
       border-top: 0;
       padding-top: 0;
 
       & > *:not(:last-of-type) {
         padding-bottom: 0;
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
     }
 
@@ -103,5 +120,11 @@
       align-self: end;
       justify-self: end;
     }
+  }
+}
+
+@media (width >= rem(1024)) {
+  .footer {
+    padding-inline: rem(165);
   }
 }
