--- a/src/common/LetsTalkSection/LetsTalkSection.scss
+++ b/src/common/LetsTalkSection/LetsTalkSection.scss
@@ -1,7 +1,6 @@
 @use '../../styles/' as *;
 
 .lets-talk-section {
-  // margin-inline: rem(28);
   max-width: rem(327);
   margin: 0 auto;
   padding: rem(68) rem(25);
@@ -12,7 +11,7 @@
   @include backgroundImage(
     '../../assets/shared/desktop/bg-pattern-call-to-action.svg'
   );
-  // z-index: 1000;
+
   position: relative;
 
   &__title {
@@ -21,7 +20,6 @@
     font-weight: 500;
     line-height: rem(36);
     padding-block-end: rem(6);
-    // width: rem(300);
     text-align: center;
   }
 
@@ -51,8 +49,9 @@
 
 @media (width>=rem(700)) {
   .lets-talk-section {
+    margin-inline: rem(39);
     padding-inline: rem(126);
-    max-width: rem(690);
+    max-width: 100%;
 
     &__title {
       font-size: rem(40);
